--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "url": "git://github.com/joeferner/node-oracle.git"
   },
   "dependencies": {
+    "nan": "1.3.0" 
   },
   "devDependencies": {
     "nodeunit": "~>0.8.0"
